fix for safari webkit force 3d touch peek preview wrong position

--- a/assets/sass/welcome.scss
+++ b/assets/sass/welcome.scss
@@ -378,6 +378,10 @@ i.icon-paper-plane {
   // background-color: red;
   height: 25px;
 
+  i {
+    display: inline-block;
+  }
+
   i.icon-paper-plane {
     font-size: 15px;
   }
